--- a/Dockerfile.raspbian
+++ b/Dockerfile.raspbian
@@ -4,7 +4,7 @@ WORKDIR /src
 RUN apt-get -qq update && apt-get -qq install -y dpkg-dev debhelper git build-essential curl
 
 ARG GOVERSION
-RUN wget -qO- "https://golang.org/dl/go$GOVERSION.linux-armv6l.tar.gz" | tar zxvf - -C /usr/local
+RUN wget -qO- "https://golang.org/dl/go$GOVERSION.linux-armv6l.tar.gz" | tar zxf - -C /usr/local
 ENV PATH="/usr/local/go/bin:${PATH}"
 RUN go version
 
