Pin to Debian Bullseye (oldstable) for Linux build
Debian Bookworm (stable) ships with a newer glibc, producing binaries
that are not backwards compatible with Bullseye (or older). Using
Bullseye (glibc v1.31), the produced binary is backwards compatible all
the way to Debian Buster (oldoldstable).

--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,6 +1,9 @@
 ARG GOVERSION
 
-FROM golang:$GOVERSION AS build-stage
+# Use Debian Bullseye to compile against the oldest glibc practically possible.
+# Debian Bookworm ships with v2.36, producing binaries not backwards compatible
+# with Bullseye (glibc v2.31).
+FROM golang:$GOVERSION-bullseye AS build-stage
 WORKDIR /src
 
 RUN apt-get update && apt-get install -y dpkg-dev debhelper
